--- a/app/src/main/res/layout/activity_gnss.xml
+++ b/app/src/main/res/layout/activity_gnss.xml
@@ -4,21 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edublt.com.locationapi.GNSSActivity"
-    tools:ignore="MissingDefaultResource">
+    tools:context=".GNSSActivity">
 
     <edublt.com.locationapi.EsferaCelesteView
         android:id="@+id/esferacelesteview_id"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/signal_quality_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="8dp" />
+
+    <edublt.com.locationapi.SignalQualityView
+        android:id="@+id/signal_quality_view"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@id/esferacelesteview_id"
         app:layout_constraintBottom_toTopOf="@id/filter_buttons"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/filter_buttons"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
